Update Card Shadow

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <div class="skills__name" data-item="frontend" data-default="true" data-aos="zoom-in-down" data-aos-duration="2500">
                     <ul>
                         <div class="skill__box">
-                            <li class="glare">
+                            <li>
                                 <img src="images/skills/frontend/angular.png" alt="">
                             </li>
                             <div class="skill__name">
@@ -204,7 +204,7 @@
                         </div>
 
                         <div class="skill__box">
-                            <li class="glare">
+                            <li>
                                 <img src="images/skills/frontend/html.svg" alt="">
                             </li>
                             <div class="skill__name">
@@ -213,7 +213,7 @@
                             </div>
                         </div>
 
-                        <div class="skill__box">
+                        <div>
                             <li class="glare">
                                 <img src="images/skills/frontend/css.svg" alt="">
                             </li>
@@ -224,7 +224,7 @@
                         </div>
 
                         <div class="skill__box">
-                            <li class="glare">
+                            <li>
                                 <img src="images/skills/frontend/javascript.svg" alt="">
                             </li>
                             <div class="skill__name">
@@ -235,7 +235,7 @@
                         </div>
 
                         <div class="skill__box">
-                            <li class="glare">
+                            <li>
                                 <img src="images/skills/frontend/typescript.svg" alt="">
                             </li>
                             <div class="skill__name">
@@ -246,7 +246,7 @@
                         </div>
 
                         <div class="skill__box">
-                            <li class="glare">
+                            <li>
                                 <img src="images/skills/frontend/bootstrap.svg" alt="">
                             </li>
                             <div class="skill__name">
@@ -262,7 +262,7 @@
                     <ul>
 
                         <div class="skill__box">
-                            <li class="glare">
+                            <li>
                                 <img src="images/skills/backend/nodejs.svg" alt="">
                             </li>
                             <div class="skill__name">
@@ -273,7 +273,7 @@
                         </div>
 
                         <div class="skill__box">
-                            <li class="glare">
+                            <li>
                                 <img src="images/skills/backend/express.svg" alt="">
                             </li>
                             <div class="skill__name">
@@ -283,7 +283,7 @@
                         </div>
 
                         <div class="skill__box">
-                            <li class="glare">
+                            <li>
                                 <img src="images/skills/backend/mongo.svg" alt="">
                             </li>
                             <div class="skill__name">
@@ -298,7 +298,7 @@
                 <div class="skills__name" data-item="language">
                     <ul>
                         <div class="skill__box">
-                            <li class="glare">
+                            <li>
                                 <img src="images/skills/languages/c.svg" alt="">
                             </li>
                             <div class="skill__name">
@@ -308,7 +308,7 @@
                         </div>
 
                         <div class="skill__box">
-                            <li class="glare">
+                            <li>
                                 <img src="images/skills/languages/c++.svg" alt="">
                             </li>
                             <div class="skill__name">
@@ -324,7 +324,7 @@
                     <ul>
 
                         <div class="skill__box">
-                            <li class="glare">
+                            <li>
                                 <img src="images/skills/tools/github-icon-1.svg" alt="">
                             </li>
                             <div class="skill__name">
@@ -333,7 +333,7 @@
                             </div>
                         </div>
                         <div class="skill__box">
-                            <li class="glare">
+                            <li>
                                 <img src="images/skills/tools/git.svg" alt="">
                             </li>
                             <div class="skill__name">
@@ -342,7 +342,7 @@
                             </div>
                         </div>
                         <div class="skill__box">
-                            <li class="glare">
+                            <li>
                                 <img src="images/skills/tools/netlify.svg" alt="">
                             </li>
                             <div class="skill__name">
@@ -351,14 +351,13 @@
                             </div>
                         </div>
                         <div class="skill__box">
-                            <li class="glare">
+                            <li>
                                 <img src="images/skills/tools/visual-studio.svg" alt="">
                             </li>
                             <div class="skill__name">
                                 <p class="title">VS Code</p>
                                 <p class="subTitle">Advanced</p>
                             </div>
-
                         </div>
                     </ul>
                 </div>
