--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 
             <div class="skill__right-box">
                 <!-- FRONTEND SKILL -->
-                <div class="skills__name" data-item="frontend" data-default="true" data-aos="zoom-in-down" data-aos-duration="2500">
+                <div class="skills__name" data-item="frontend" data-default="true" data-aos="fade-up" data-aos-duration="2500">
                     <ul>
                         <div class="skill__box">
                             <li>
@@ -214,7 +214,7 @@
                         </div>
 
                         <div>
-                            <li class="glare">
+                            <li>
                                 <img src="images/skills/frontend/css.svg" alt="">
                             </li>
                             <div class="skill__name">
