--- a/index.html
+++ b/index.html
@@ -382,56 +382,96 @@
 
             <!-- ALL -->
             <div class="project__main" Data-Item="all" Data-Default="true">
-                <div class="project__card">
+                <div class="project__card"
+                     data-name="Shoping Web App" 
+                     data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
+                     data-link="https://tanwaranish.netlify.app/" 
+                     data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+
                     <img src="images/portfolio/all/webapp-1.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
-                <div class="project__card">
+                <div class="project__card"
+                     data-name="Shoping Web App" 
+                     data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
+                     data-link="https://tanwaranish.netlify.app/" 
+                     data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+>
                     <img src="images/portfolio/all/webapp-2.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
-                <div class="project__card">
+                <div class="project__card"
+                     data-name="Order Page Prototype" 
+                     data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
+                     data-link="https://tanwaranish.netlify.app/" 
+                     data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+>
                     <img src="images/portfolio/all/order-page.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
-                <div class="project__card">
+                <div class="project__card"
+                data-name="Shoping Web App" 
+                data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
+                data-link="https://tanwaranish.netlify.app/" 
+                data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+>
                     <img src="images/portfolio/all/website-1.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
-                <div class="project__card">
+                <div class="project__card"
+                data-name="Shoping Web App" 
+                data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
+                data-link="https://tanwaranish.netlify.app/" 
+                data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+>
                     <img src="images/portfolio/all/website-2.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
-                <div class="project__card">
+                <div class="project__card"
+                data-name="Shoping Web App" 
+                data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
+                data-link="https://tanwaranish.netlify.app/" 
+                data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+>
                     <img src="images/portfolio/all/webapp-3.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
-                <div class="project__card">
+                <div class="project__card"
+                data-name="Shoping Web App" 
+                data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
+                data-link="https://tanwaranish.netlify.app/" 
+                data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+>
                     <img src="images/portfolio/all/website-3.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
-                <div class="project__card">
+                <div class="project__card"
+                data-name="Shoping Web App" 
+                data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
+                data-link="https://tanwaranish.netlify.app/" 
+                data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+>
                     <img src="images/portfolio/all/webapp-4.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
@@ -441,35 +481,60 @@
 
             <!-- WEB APP -->
             <div class="project__main" Data-Item="web-app">
-                <div class="project__card">
+                <div class="project__card"
+                data-name="Shoping Web App" 
+                data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
+                data-link="https://tanwaranish.netlify.app/" 
+                data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+>
                     <img src="images/portfolio/web-app/webapp-1.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
-                <div class="project__card">
+                <div class="project__card"
+                data-name="Shoping Web App" 
+                data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
+                data-link="https://tanwaranish.netlify.app/" 
+                data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+>
                     <img src="images/portfolio/web-app/webapp-2.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
-                <div class="project__card">
+                <div class="project__card"
+                data-name="Shoping Web App" 
+                data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
+                data-link="https://tanwaranish.netlify.app/" 
+                data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+>
                     <img src="images/portfolio/web-app/webapp-3.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
-                <div class="project__card">
+                <div class="project__card"
+                data-name="Shoping Web App" 
+                data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
+                data-link="https://tanwaranish.netlify.app/" 
+                data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+>
                     <img src="images/portfolio/web-app/webapp-4.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
-                <div class="project__card">
+                <div class="project__card"
+                data-name="Shoping Web App" 
+                data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
+                data-link="https://tanwaranish.netlify.app/" 
+                data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+>
                     <img src="images/portfolio/web-app/webapp-5.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
@@ -479,35 +544,60 @@
 
             <!-- WEBSITE -->
             <div class="project__main" Data-Item="website">
-                <div class="project__card">
+                <div class="project__card"
+                data-name="Shoping Web App" 
+                data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
+                data-link="https://tanwaranish.netlify.app/" 
+                data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+>
                     <img src="images/portfolio/website/website-1.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
-                <div class="project__card">
+                <div class="project__card"
+                data-name="Shoping Web App" 
+                data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
+                data-link="https://tanwaranish.netlify.app/" 
+                data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+>
                     <img src="images/portfolio/website/p-website-5.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
-                <div class="project__card">
+                <div class="project__card"
+                data-name="Shoping Web App" 
+                data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
+                data-link="https://tanwaranish.netlify.app/" 
+                data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+>
                     <img src="images/portfolio/website/website-2.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
-                <div class="project__card">
+                <div class="project__card"
+                data-name="Shoping Web App" 
+                data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
+                data-link="https://tanwaranish.netlify.app/" 
+                data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+>
                     <img src="images/portfolio/website/website-3.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
-                <div class="project__card">
+                <div class="project__card"
+                data-name="Shoping Web App" 
+                data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
+                data-link="https://tanwaranish.netlify.app/" 
+                data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
+>
                     <img src="images/portfolio/website/p-website-4.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
