--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                 <div class="project__card"
                      data-name="Shoping Web App" 
                      data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
-                     data-link="https://tanwaranish.netlify.app/" 
+                     data-link="https://nobis-store.netlify.app/" 
                      data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
 
                     <img src="images/portfolio/all/webapp-1.png" alt="">
@@ -397,7 +397,7 @@
                 <div class="project__card"
                      data-name="Shoping Web App" 
                      data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
-                     data-link="https://tanwaranish.netlify.app/" 
+                     data-link="https://nobis-fashionhub.netlify.app/" 
                      data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
                     <img src="images/portfolio/all/webapp-2.png" alt="">
                     <div class="cover_icon">
@@ -649,7 +649,7 @@
                 </h3>
 
                 <div class="qualification__info">
-                    <div>
+                    <div class="qualification_one">
                         <h3 class="qualification__name">
                             Masters of Computer Application
                         </h3>
@@ -711,6 +711,7 @@
 
     </section>
 
+    <!--================== FOOTER ==================-->
     <section class="Footer__container section">
         <div class="footer__container container grid">
         <div class="top__box">
@@ -761,7 +762,7 @@
         </div>
         <div class="bottom__box">
             <span class="copyright">
-                &#169; Copyright Designed by Anishtanwar. All rights reserved
+                &#169; Copyright Designed by anishtanwar. All rights reserved
             </span>
         </div>
     </div>
