--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                 <div class="project__card"
                 data-name="Shoping Web App" 
                 data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
-                data-link="https://tanwaranish.netlify.app/" 
+                data-link="https://nobis24.netlify.app/" 
                 data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
 
                     <img src="images/portfolio/all/website-1.png" alt="">
@@ -432,7 +432,7 @@
                 <div class="project__card"
                 data-name="Shoping Web App" 
                 data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
-                data-link="https://tanwaranish.netlify.app/" 
+                data-link="https://nobisfashion.netlify.app/" 
                 data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
                     <img src="images/portfolio/all/website-2.png" alt="">
                     <div class="cover_icon">
