--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                 <div class="project__card"
                 data-name="Shoping Web App" 
                 data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
-                data-link="https://tanwaranish.netlify.app/" 
+                data-link="https://netflixclone-pixinit.netlify.app/" 
                 data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
                     <img src="images/portfolio/all/webapp-3.png" alt="">
                     <div class="cover_icon">
@@ -454,7 +454,7 @@
                 <div class="project__card"
                 data-name="Shoping Web App" 
                 data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
-                data-link="https://tanwaranish.netlify.app/" 
+                data-link="https://anishtanwar11.github.io/HTML-Template1/" 
                 data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
                     <img src="images/portfolio/all/website-3.png" alt="">
                     <div class="cover_icon">
@@ -465,7 +465,7 @@
                 <div class="project__card"
                 data-name="Shoping Web App" 
                 data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
-                data-link="https://tanwaranish.netlify.app/" 
+                data-link="https://nobis-24.netlify.app/" 
                 data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
                     <img src="images/portfolio/all/webapp-4.png" alt="">
                     <div class="cover_icon">
