--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                 <div class="project__card"
                 data-name="Shoping Web App" 
                 data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
-                data-link="https://tanwaranish.netlify.app/" 
+                data-link="https://nobis-24.netlify.app/" 
                 data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
                     <img src="images/portfolio/web-app/webapp-1.png" alt="">
                     <div class="cover_icon">
@@ -490,7 +490,7 @@
                 <div class="project__card"
                 data-name="Shoping Web App" 
                 data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
-                data-link="https://tanwaranish.netlify.app/" 
+                data-link="https://nobis-fashionhub.netlify.app/" 
                 data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
 
                     <img src="images/portfolio/web-app/webapp-2.png" alt="">
@@ -513,7 +513,7 @@
                 <div class="project__card"
                 data-name="Shoping Web App" 
                 data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
-                data-link="https://tanwaranish.netlify.app/" 
+                data-link="https://netflixclone-pixinit.netlify.app/" 
                 data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
                     <img src="images/portfolio/web-app/webapp-4.png" alt="">
                     <div class="cover_icon">
@@ -524,7 +524,7 @@
                 <div class="project__card"
                 data-name="Shoping Web App" 
                 data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
-                data-link="https://tanwaranish.netlify.app/" 
+                data-link="https://nobis-store.netlify.app/" 
                 data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
                     <img src="images/portfolio/web-app/webapp-5.png" alt="">
                     <div class="cover_icon">
