--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
                 <div class="project__card"
                 data-name="Shoping Web App" 
                 data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
-                data-link="https://tanwaranish.netlify.app/" 
+                data-link="https://nobisfashion.netlify.app/" 
                 data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
                     <img src="images/portfolio/website/website-1.png" alt="">
                     <div class="cover_icon">
@@ -549,7 +549,7 @@
                 <div class="project__card"
                 data-name="Shoping Web App" 
                 data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
-                data-link="https://tanwaranish.netlify.app/" 
+                data-link="https://anishtanwar.netlify.app/" 
                 data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
                     <img src="images/portfolio/website/p-website-5.png" alt="">
                     <div class="cover_icon">
@@ -560,7 +560,7 @@
                 <div class="project__card"
                 data-name="Shoping Web App" 
                 data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
-                data-link="https://tanwaranish.netlify.app/" 
+                data-link="https://nobis24.netlify.app/" 
                 data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
                     <img src="images/portfolio/website/website-2.png" alt="">
                     <div class="cover_icon">
@@ -571,7 +571,7 @@
                 <div class="project__card"
                 data-name="Shoping Web App" 
                 data-discription="Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio natus delectus maiores. Dolore, maiores. Aspernatur placeat similique corporis unde velit veritatis totam magnam neque provident!"
-                data-link="https://tanwaranish.netlify.app/" 
+                data-link="https://anishtanwar11.github.io/HTML-Template1/" 
                 data-video="https://www.youtube.com/embed/wCcnZ89ITiU?si=cZqZ_WXcYSQjtFBQ">
                     <img src="images/portfolio/website/website-3.png" alt="">
                     <div class="cover_icon">
